# django-otp-webauthn

./: .all-contributorsrc  .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTORS.md  Caddyfile  DEVELOPMENT.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  codecov.yaml  manage.py  package.json  pyproject.toml  requirements.txt  run_e2e_testsuite.sh  sandbox-requirements.txt  tox.ini  update_translations.sh
.github/: dependabot.yml  extract_changelog.py  report_nightly_build_failure.py
.github/ISSUE_TEMPLATE/: feedback.yml
.github/workflows/: build-docs.yml  build-release.yml  docs.yml  nightly-tests.yml  playwright-tests.yml  publish-test.yml  publish.yml  scorecard.yml  spellcheck.yml  test.yml  zizmor.yml
client/: Dockerfile.client  package.json  vite.config.ts  webpack.base.config.ts  webpack.prod.config.ts
client/src/: auth.ts  config.ts  globals.d.ts  register.ts  support.ts  sync_signals.ts  types.ts  utils.ts
docs/: .gitignore  Makefile  conf.py  faq.rst  glossary.rst  index.rst  limitations.rst  requirements.txt  spellingcheck.yaml  wordlist.txt
docs/contributing/: index.rst  restructuredtext_usage.rst  style_guide.rst
docs/customizing_behavior/: customize_models.rst  customize_views.rst  index.rst
docs/getting_started/: about_passkeys.rst  index.rst  quickstart.rst
docs/how_to_guides/: configure_related_origins.rst  customize_helper_class.rst  customize_models.rst  customize_views.rst  index.rst  keeping_passkeys_in_sync.rst
docs/reference/: helper.rst  index.rst  json_request_and_response.rst  models.rst  views.rst
docs/test-content/: development.rst
otp_passkeys/: admin.py  conf.py  models.py  urls.py  utils.py
otp_passkeys/fido_webauthn/: __init__.py  provider.py
otp_passkeys/migrations/: 0001_initial.py
otp_passkeys/templates/otp_passkeys/: otp_passkeys_auth_scripts.html  otp_passkeys_register_scripts.html
otp_passkeys/templatetags/: otp_passkeys.py
otp_passkeys/views/: __init__.py  auth.py  register.py
sandbox/: admin.py  middleware.py  settings.py  urls.py  urls_test.py  views.py  views_test.py
sandbox/locale/de/LC_MESSAGES/: django.po
sandbox/locale/es/LC_MESSAGES/: django.po
sandbox/locale/nl/LC_MESSAGES/: django.po
sandbox/static/sandbox/: django_admin_login.css  event_listeners.js  style.css
sandbox/templates/: base.html  django_admin_login.html
sandbox/templates/admin/: base.html
sandbox/templates/registration/: login.html
sandbox/templates/sandbox/: index.html  login_passkey.html  login_passkey_custom_next_input.html  second_factor_verification.html
scripts/: compile_translations.sh  run_e2e_testsuite.sh  update_translations.sh
src/django_otp_webauthn/: __init__.py  admin.py  apps.py  backends.py  checks.py  exceptions.py  helpers.py  models.py  settings.py  urls.py  utils.py  views.py
src/django_otp_webauthn/locale/de/LC_MESSAGES/: django.po  djangojs.po
src/django_otp_webauthn/locale/es/LC_MESSAGES/: django.po  djangojs.po
src/django_otp_webauthn/locale/it/LC_MESSAGES/: django.po  djangojs.po
src/django_otp_webauthn/locale/nl/LC_MESSAGES/: django.po  djangojs.po
src/django_otp_webauthn/migrations/: 0001_initial.py  0001_squashed_0003_webauthncredential_hash_binary_to_hex.py  0002_timestamps.py  0003_webauthncredential_hash_binary_to_hex.py  0004_webauthnuserhandle.py
src/django_otp_webauthn/templates/django_otp_webauthn/: auth_scripts.html  register_scripts.html  sync_signals_scripts.html
src/django_otp_webauthn/templatetags/: otp_webauthn.py
tests/: conftest.py  factories.py  fuzzy.py
tests/e2e/: conftest.py  fixtures.py  test_credential_authentication.py  test_credential_registration.py  test_webauthn_signals.py
tests/fixtures/schemas/: begin_authentication_response.json  begin_registration_response.json
tests/integration/: test_views.py  test_views_authentication.py  test_views_registration.py  test_views_wellknown.py
tests/testapp/: __init__.py  models.py  settings.py
tests/testapp/migrations/: 0001_initial.py
tests/unit/: test_admin.py  test_backends.py  test_checks.py  test_helpers.py  test_migrations.py  test_models.py  test_settings.py  test_templatetags.py  test_urls.py  test_utils.py  test_views.py  test_views_authentication_methods.py
