[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-otp-webauthn"
dynamic = ["version"]
readme = "README.md"
description = "FIDO2 WebAuthn support for django-otp: lets your users authenticate with Passkeys"
requires-python = ">=3.9"
license = "BSD-3-Clause"
keywords = ["django", "django-otp", "webauthn", "fido2", "u2f", "security", "mfa", "authentication"]
authors = [{ name = "Storm B. Heg", email = "storm@stormbase.digital" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Topic :: Security",
  "Topic :: Communications :: FIDO",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
]
dependencies = [
  "django>=4.2",
  "django-otp>=1.4,<2.0",
  "djangorestframework>=3.14",
  "webauthn>=2.1.0,<3",
]

[project.optional-dependencies]
testing =  [
  "beautifulsoup4>=4,<5",
  "django-debug-toolbar>4,<5",
  "dj-database-url>=2.1.0,<3",
  # To test functionality with a strict Content Security Policy
  "django-csp>=4,<5",
  # Update as necessary, prevent sudden breakage
  "pytest>8,<9",
  "coverage[toml]>=7,<8",
  "pytest-django>4.5,<5",
  "pytest-factoryboy>=2,<3",
  "pytest-env>=1,<2",
  "pytest-randomly>=3.15,<4",
  "pytest-mock>=3.14,<4",
  "jsonschema ~= 4.23",
]
playwright = [
  "playwright>=1.49,<2",
  "pytest-playwright>=0.5.2,<1",
]
docs = [
  "Sphinx==8.0.2",
  "furo==2024.8.6",
  "sphinx_design==0.6.1",
  "sphinx-copybutton==0.5.2",
  "sphinx-autobuild==2024.10.3",
  "pyspelling==2.10",
]

[project.urls]
Documentation = "https://django-otp-webauthn.readthedocs.io/en/latest/"
Changelog = "https://github.com/Stormbase/django-otp-webauthn/blob/main/CHANGELOG.md"
Issues = "https://github.com/Stormbase/django-otp-webauthn/issues"
Source = "https://github.com/Stormbase/django-otp-webauthn"

[tool.hatch.version]
path = "src/django_otp_webauthn/__init__.py"

[tool.hatch.build.targets.wheel]
artifacts = [
  # Include built static files that are gitignored and thus not included by default
  "src/django_otp_webauthn/static/django_otp_webauthn/*",
  # Include compiled translations that are gitignored and thus not included by default
  "src/django_otp_webauthn/locale/*/LC_MESSAGES/*.mo",
]

[tool.hatch.build.targets.sdist]
artifacts = [
  # Include built static files that are gitignored and thus not included by default
  "src/django_otp_webauthn/static/django_otp_webauthn/*",
  # Include compiled translations that are gitignored and thus not included by default
  "src/django_otp_webauthn/locale/*/LC_MESSAGES/*.mo",
  "sandbox/locale/*/LC_MESSAGES/*.mo",
]
# Manually specify what to include, otherwise it becomes a mess
include = [
  "src/django_otp_webauthn",
  "sandbox/",
  "client/",
  "tests/",
  "scripts/",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "CONTRIBUTORS.md",
  "SECURITY.md",
  "pyproject.toml",
]

[tool.hatch.envs.default]
dependencies = [
  "django-otp-webauthn[testing,docs]",
]

[tool.hatch.envs.hatch-static-analysis]
# Do not use Hatch default configuration
config-path = "pyproject.toml"
dependencies = []

[tool.ruff]
target-version = "py39" # minimum target version

[tool.ruff.lint]
# E501: Line too long
ignore = ["E501"]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "T20", # flake8-print
    "BLE", # flake8-blind-except
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["django_otp_webauthn", "sandbox", "tests"]

[tool.pytest.ini_options]
pythonpath = "sandbox"
DJANGO_SETTINGS_MODULE = "settings"
testpaths = "tests/"
norecursedirs = ["tests/e2e"]
addopts = "--reuse-db"

[tool.coverage.run]
source_pkgs = ["django_otp_webauthn"]
branch = true
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc.)?abstractmethod",

    # Nor complain about type checking
    "if TYPE_CHECKING:",
]
